--- a/sqlworkbench/src/language/wbstrings_de.properties
+++ b/sqlworkbench/src/language/wbstrings_de.properties
@@ -839,7 +839,7 @@ ErrFileCreate=Die Ausgabedatei konnte nicht angelegt werden: {0}
 ErrExportOutputDirNotDir={0} ist kein Verzeichnis!
 ErrExportOutputDirRequired=Die Angabe eines Ausgabeverzeichnisses ist erforderlich!
 ErrExportNoTablesDef=Bitte definieren Sie die zu exportierenden Tabellen mit -sourceTable
-ErrExpQuoteRequired=Ein Wert f\u00fcr -quoteChar ist erforderlich wenn -quoteCharEscaping verwendet wird
+ErrExpQuoteRequired=Ein Wert f\u00fcr -quoteChar ist erforderlich wenn -quoteCharEscaping, -quoteAlways, -quoteHeader oder -quoteNulls verwendet wird
 ErrOutputDirNotFound=Ausgabeverzeichnis {0} nicht gefunden!
 ErrExportTypeRequired=Das Ausgabeformat ist erforderlich. Bitte definieren Sie das Ausgabeformat mit -type
 ErrExportWrongType=Ung\u00fcltiges Ausgabeformat angegeben!
