--- a/sqlworkbench/src/language/wbstrings.properties
+++ b/sqlworkbench/src/language/wbstrings.properties
@@ -830,7 +830,7 @@ ErrExportExecute=An error occurred while running the export:
 ErrExportFileWrite=The outputfile cannot be written.
 ErrExportOutputDirNotDir={0} is not a directory!
 ErrExportOutputDirRequired=An output directory is required!
-ErrExpQuoteRequired=A quote character must be specified using -quoteChar when specifying -quoteCharEscaping
+ErrExpQuoteRequired=A quote character must be specified with -quoteChar when using -quoteCharEscaping, -quoteAlways, -quoteHeader or -quoteNulls
 ErrOutputDirNotFound=Output directory {0} not found!
 ErrExportTypeRequired=The export type is required, please specify with -type
 ErrExportWrongType=Invalid export type specified!
