--- a/trunk/sqlworkbench/src/language/wbstrings.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings.properties
@@ -1530,6 +1530,7 @@ LblExportFreezeHeader=Freeze column headers
 LblExportInfoSheet=Create Info-Worksheet
 LblExportLineEnding=Line ending
 LblExportQuoteAlways=Quote always
+LblExportQuoteHeader=Quote header
 LblExportRange7Bit=Outside [32-126]
 LblExportRange8Bit=Outside [32-255]
 LblExportRange8BitExtended=Outside [32-126] and [160-255]
