--- a/trunk/sqlworkbench/src/language/wbstrings_de.properties
+++ b/trunk/sqlworkbench/src/language/wbstrings_de.properties
@@ -1508,7 +1508,8 @@ LblExportLineEnding=Zeilenende
 LblExportAutoFilter=Erzeuge Autofilter
 LblExportFreezeHeader=Fixiere Spaltenk\u00f6pfe
 LblExportInfoSheet=Info-Worksheet
-LblExportQuoteAlways=Quote immer verwenden
+LblExportQuoteAlways=Quote immer
+LblExportQuoteHeader=Quote f\u00fcr Header
 LblExportRange7Bit=Au\u00dferhalb von [32-126]
 LblExportRange8Bit=Au\u00dferhalb von [32-255]
 LblExportRange8BitExtended=Au\u00dferhalb von [32-126] und [160-255]
